--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ image: seanplynch
 <div class="container" id="main_container">
 <h4>Projects</h4>
 <section>
-<img src="img/phonographic.jpeg" class="app"/>
+<img src="img/Phonographic.jpeg" class="app"/>
 <h5><a href="phonographic">Phonographic</a></h5>
 <p>You know you have great taste in music, why not let the whole world know?</p>
 <!-- <img class="screenshot" src="img/gotmail-menu.png"/>
